--- a/Multiconsult_V001/Multiconsult_V001.csproj
+++ b/Multiconsult_V001/Multiconsult_V001.csproj
@@ -56,28 +56,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Assembler.cs" />
+    <Compile Include="Classes\Assembly.cs" />
     <Compile Include="Classes\Column.cs" />
     <Compile Include="Classes\Column_Section.cs" />
     <Compile Include="Classes\Floor.cs" />
+    <Compile Include="Classes\Floor_Section.cs" />
     <Compile Include="Classes\Geo_Borehole.cs" />
     <Compile Include="Classes\Geo_Layer.cs" />
     <Compile Include="Classes\Geo_Node.cs" />
     <Compile Include="Classes\Geo_Terrain.cs" />
     <Compile Include="Classes\Material.cs" />
     <Compile Include="Classes\Wall.cs" />
+    <Compile Include="Classes\Wall_Section.cs" />
+    <Compile Include="Components\MC_CorrectModel_1.cs" />
     <Compile Include="Components\MR_Column_Brep.cs" />
+    <Compile Include="Components\MR_Floor_Brep.cs" />
     <Compile Include="Components\MR_Walls.cs" />
     <Compile Include="Components\MR_Floors.cs" />
-    <Compile Include="Components\MR_Assembler.cs" />
+    <Compile Include="Components\MC_Assembler.cs" />
     <Compile Include="Components\MG_Soil.cs" />
     <Compile Include="Components\MG_Terrain.cs" />
+    <Compile Include="Components\MR_Wall_Brep.cs" />
+    <Compile Include="deconstructors\DeconstructAssembly.cs" />
+    <Compile Include="deconstructors\DeconstructWall.cs" />
+    <Compile Include="FEMDesign\MF_FEMDesignModel.cs" />
     <Compile Include="Methods\Geometry.cs" />
     <Compile Include="Methods\Plaxis.cs" />
     <Compile Include="Methods\FemDesign.cs" />
     <Compile Include="Components\MR_Columns.cs" />
+    <Compile Include="Methods\Revit.cs" />
     <Compile Include="Multiconsult_V001Info.cs" />
+    <Compile Include="Plaxis\MP_PlaxisModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Revit\MR_RevitModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
